--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,16 @@ keywords = [ "nostr" ]
 license = "MIT"
 
 [dependencies]
+base64 = "0.21"
+colorful = "0.2"
+futures-util = "0.3"
+http = "1.1"
+lazy_static = "1.4"
 nostr-types = { git = "https://github.com/mikedilger/nostr-types" }
+rand = "0.8"
+rand_core = "0.6"
+serde = { version = "1.0", features = [ "derive" ] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = { version = "0.21", features = [ "connect", "handshake", "rustls-tls-webpki-roots" ] }
+tungstenite = { version = "0.21", features = [ "rustls-tls-webpki-roots" ] }
