--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = "1.4"
 nostr-types = { git = "https://github.com/mikedilger/nostr-types" }
 rand = "0.8"
 rand_core = "0.6"
+reqwest = { version = "0.11", default-features = false, features = [ "blocking", "json", "rustls-tls-webpki-roots"  ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
