--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ nostr-types = { git = "https://github.com/mikedilger/nostr-types" }
 rand = "0.8"
 rand_core = "0.6"
 reqwest = { version = "0.11", default-features = false, features = [ "blocking", "json", "rustls-tls-webpki-roots"  ] }
+rpassword = "7.2"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
