--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ base64 = "0.21"
 bech32 = "0.9"
 colorful = "0.2"
 futures-util = "0.3"
+hex = "0.4"
 http = "1.1"
 k256 = { version = "0.13", features = [ "schnorr", "ecdh" ] }
 lazy_static = "1.4"
