--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Mike Dilger <mike@mikedilger.com>"]
 description = "Command line tools for nostr"
+repository = "https://github.com/mikedilger/nostr-probe"
 keywords = [ "nostr" ]
 license = "MIT"
 
