--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rand = "0.8"
 rand_core = "0.6"
 reqwest = { version = "0.11", default-features = false, features = [ "blocking", "json", "rustls-tls-webpki-roots"  ] }
 rpassword = "7.2"
+secp256k1 = { version = "0.29", features = [ "hashes", "global-context", "rand-std", "serde" ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
